--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.2.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
